# aether

./: .env.example  .gitignore  .gitpod.yml  .space.kts  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  index.md
.config/: Aether.toml  config.default.json
.docker/: docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker.yml  rust.yml
aether/: Cargo.toml  Dockerfile
aether/src/: main.rs  settings.rs
aether/src/api/: interface.rs
aether_core/: Cargo.toml
code/crates/aether/: Cargo.toml  Dockerfile
code/crates/aether-core/: Cargo.toml  README.md
code/crates/aether/src/: blockchain.rs  main.rs
code/crates/aether/src/app/: application.rs  mod.rs
code/crates/aether_core/: Cargo.toml
code/crates/disaronno/: Cargo.toml  README.md
code/crates/disaronno/src/: lib.rs  primitives.rs
code/crates/disaronno/src/chain/: mod.rs
code/crates/lib/: Cargo.toml  README.md
code/crates/lib/src/: lib.rs
config/: config.default.json  default.config.json
deploy/: docker-compose.yml
lib/: Cargo.toml
src/: lib.rs  main.rs
src/actors/: interface.rs  mod.rs
src/app/: mod.rs
src/app/commands/: mod.rs
src/app/endpoints/: index.rs
src/core/: context.rs  mod.rs  primitives.rs  settings.rs
src/data/: mod.rs
src/data/models/: items.rs  mod.rs
src/data/schemas/: mod.rs
