[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
edition = "2021"
name = "aether"
version = "0.1.0"

[dependencies]
axum = "0.5.6"
bcrypt = "0.13.0"
bson = { features = ["chrono-0_4", "serde_with"], version = "2.2.0" }
chrono = "0.4.19"
config = "0.13.1"
diesel = "2.0.0-rc.0"
ethers = "0.6.2"
futures = "0.3.21"
hyper = { features = ["full"], version = "0.14.18" }
openidconnect = "2.3.1"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
siwe = "0.3.0"
tokio = { features = ["full"], version = "1.18.2" }
tower = "0.4.12"