[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "A highly modular blockchain framework designed for the Scattered-Systems Ecosystem"
edition = "2021"
license = "MIT"
name = "aether-core"
repository = "https://github.com/scattered-systems/aether.git"
version = "0.1.1"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "simple"
path = "tests/simple.rs"

[dependencies]

