[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "A zk-SNARK, Ethereum Native Multi-Chain engineered for optimal user experiences"
edition = "2021"
license = "MIT"
name = "aether"
repository = "https://github.com/scattered-systems/aether.git"
version = "0.1.0"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
acme = "0.1.6"
axum = "0.5.6"
blake2 = "0.10.4"
bson = { features = ["chrono-0_4", "serde_with"], version = "2.2.0" }
chrono = "0.4.19"
config = "0.13.1"
futures = "0.3.21"
glob = "0.3.0"
http = "0.2.7"
hyper = { features = ["full"], version = "0.14.18" }
libp2p = { features = ["dns-tokio", "tcp-tokio"], version = "0.44.0" }
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
sha2 = "0.10.2"
tokio = { features = ["full"], version = "1.18.2" }
tower-http = { features = ["compression-br", "propagate-header", "sensitive-headers", "trace"], version = "0.3.3" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"